# laboratorioros

./: .gitignore  README.md
devel/: .catkin  .rosinstall
laboratorioros-master_2/laboratorioros-master/: README.md
laboratorioros-master_2/laboratorioros-master/src/edo/: CMakeLists.txt  package.xml
laboratorioros-master_2/laboratorioros-master/src/edo/urdf/: edo.urdf.xacro
matlab/: dynsim_2link_planar.slx  dynsim_2link_planar.slx.autosave  dynsim_2link_planar.slxc  dynsim_2link_planar.tgz  dynsim_test_urdf_init.m  init_2link_planar.m  kinsim_2link_planar.slx  kinsim_2link_planar.slxc  kinsim_2link_planar.tgz
matlab/dynsim_2link_planar_ert_rtw/: CMakeLists.txt  buildInfo.mat  build_exception.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  dynsim_2link_planar.cpp  dynsim_2link_planar.h  dynsim_2link_planar.mk  dynsim_2link_planar_data.cpp  dynsim_2link_planar_types.h  package.xml  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypeschksum.mat  slros_busmsg_conversion.h  slros_initialize.cpp
matlab/kinsim_2link_planar_ert_rtw/: buildInfo.mat  build_exception.mat  codeInfo.mat  codedescriptor.dmr  ert_main.cpp  kinsim_2link_planar.cpp  kinsim_2link_planar.h  kinsim_2link_planar.mk  kinsim_2link_planar_data.cpp  kinsim_2link_planar_private.h  kinsim_2link_planar_types.h  modelsources.txt  rtmodel.h  rtwtypes.h  slros_initialize.cpp
src/dynsim_2link_planar/: dynsim_2link_planar.cpp  dynsim_2link_planar.h  dynsim_2link_planar_data.cpp  package.xml  (+13 more)
urdf/: 2link_planar_model.urdf
(+562 files in other folders)
