<package>
  <name>edo</name>
  <version>0.1.0</version>
  <description>
    <p>Pacchetto per il robot Edo</p>
  </description>
  <author email="giulio.vaccari@mail.polimi.it">Giulio Vaccari</author>
  <maintainer email="giulio.vaccari@mail.polimi.it" > </maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
